105 fix turn when player 1 starts